package TOPSECRET.ddd;

public interface AggregateRoot <ID extends DomainId> extends DomainEntity<ID>{
}
