@startuml

'==== Title ====
title Publication Aggregate


'==== basic style ====
skinparam monochrome false
skinparam shadowing false
skinparam defaultFontName Futura
skinparam objectFontSize 20
skinparam backgroundColor CornSilk
skinparam objectBackgroundColor WhiteSmoke
skinparam noteBackgroundColor #FFFFE0
skinparam ArrowFontColor #3B4953
skinparam ActivationBackgroundColor black
skinparam classAttributeIconSize 0

top to bottom direction
' ===== Domain =====
Package "domain" {

    Package "publication" #b0c4d4 {

        class Publication <<Root>> <<Entity>> {
            -_releaseYear : Year
            -_synopsis : String
            +isByAuthorId(authorId : AuthorId) : boolean
            +isByGenreId(genreId : GenreId) : boolean
        }

        class PublicationFactory <<Factory>> {
            +createPublication(title : Title, authorId : AuthorId, year : Year, genreId: GenreId, synopsis: String) : Publication
            +createPublication(publicationId : PublicationId, title : Title, authorId : AuthorId, year : Year, genreId: GenreId, synopsis: String) : Publication
        }

    }

    Package "valueobject"  {

        class PublicationId <<ValueObject>> #LightPink {
           - _releaseYear : Year

        }

        class Title <<ValueObject>> {
        }

        class AuthorId <<ValueObject>> {
        }

        class GenreId <<ValueObject>>{
        }



    }

    Package "repository"   {
        interface IPublicationRepo <<Interface>>
    }

    Publication -[hidden]right- IPublicationRepo
    PublicationId -[hidden]right- IPublicationRepo

}

Package "ddd" {
    interface IRepository<ID, T> <<Interface>> {
        +save(entity : T) : T
        +findAll() : Iterable<T>
        +findAllKeys() : List<ID>
        +ofIdentity(id : ID) : Optional<T>
        +containsOfIdentity(id : ID) : boolean
    }
    interface AggregateRoot <ID >{
             }
    interface DomainEntity<ID, T> <<Interface>> {
              +identity() : ID
              +sameAs(object:Object) : boolean
    }
}


' ===== Relations =====
Publication "1" --> "ID 1" PublicationId : has
Publication "*"-> "1" Title : has
Publication "*"..> "1" AuthorId : references
Publication "*"..> "1" GenreId : references

PublicationId "*" --> "1" Title : uses
PublicationId "*" -> "1" AuthorId : uses

IPublicationRepo -|> IRepository
IPublicationRepo -> Publication : persists
PublicationFactory ..> Publication : <<create>>

AggregateRoot -|> DomainEntity
Publication .|> AggregateRoot
@enduml